dev/petclinic/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-app
  namespace: petclinic

spec:
  replicas: 2 #if use hpa, don't use replicas
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%
  selector:
    matchLabels:
      app: petclinic-app
  template:
    metadata:
      labels:
        app: petclinic-app
    spec:
      imagePullSecrets:
        - name: ecr-registry-secret
      containers:
        - name: petclinic-app
          image: 587866558777.dkr.ecr.ap-southeast-2.amazonaws.com/petclinic-dev:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: petclinic
